--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+        <script src="./build/js/app.js" defer></script>
 </head>
 <body>
-    <div id="root">
-        <h1>Hello World!</h1>
-    </div>
-    <script src="./build/js/app.js"></script>
+    <div id="root"></div>
 </body>
 </html>
