--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         * { user-select: none; }
     </style>
 
-    <link rel="stylesheet" href="styles/UIkit/css/uikit-rtl.min.css" />
+    <link rel="stylesheet" href="styles/UIkit/css/uikit.min.css" />
 
     <script src="styles/UIkit/js/uikit.min.js" defer></script>
     <script src="styles/UIkit/js/uikit-icons.min.js" defer></script>
