--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+        <style>
+            * { user-select: none; }
+        </style>
     </head>
     <body>
         <div id="root"></div>
