--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -8,20 +8,28 @@
 
             * { user-select: none; }
 
-            body {
+            body,
+            #transaction,
+            #category-management {
                 overflow-y: scroll;
             }
 
-            body::-webkit-scrollbar {
+            body::-webkit-scrollbar,
+            #transaction::-webkit-scrollbar,
+            #category-management::-webkit-scrollbar {
                 width: 10px;
                 background-color: #f9f9fd;
             }
 
-            body::-webkit-scrollbar-thumb {
+            body::-webkit-scrollbar-thumb,
+            #transaction::-webkit-scrollbar-thumb,
+            #category-management::-webkit-scrollbar-thumb {
                 background-color: #32D296;
             }
 
-            body::-webkit-scrollbar-track {
+            body::-webkit-scrollbar-track,
+            #transaction::-webkit-scrollbar-track,
+            #category-management::-webkit-scrollbar-track {
                 -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
                 background-color: #f9f9fd;
             }
